# sagnjajnesbh

./: ACTUAL_UNSUPPORTED_FEATURES.md  ANTLR_INTEGRATION_COMPLETE.md  ARCHITECTURE_CLEANUP_COMPLETE.md  ARCHITECTURE_CLEANUP_PLAN.md  ARCHITECTURE_MIGRATION_ANALYSIS.md  AST_Implementation_Summary.md  AUTO_ADDITION_IMPLEMENTATION.md  BASIC_SYNTAX_IMPLEMENTATION_SUMMARY.md  CHTHOLLY_MODULE_IMPLEMENTATION.md  CHTLJSFunction_完整演示.md  CHTLJS_ENHANCED_FUNCTIONS_IMPLEMENTATION.md  CHTL_ANTLR_CROSS_PLATFORM_RUNTIME.md  CHTL_CJMOD_Integration_Summary.md  CHTL_COMPREHENSIVE_TEST_REPORT.md  CHTL_Enhanced_Features_Summary.md  CHTL_Implementation_Summary.md  CHTL_JS_ANIMATION_AND_VIR_ANALYSIS.md  CHTL_JS_SYNTAX_CORRECTION.md  CHTL_JS_VIR_OBJECT_CORRECT_UNDERSTANDING.md  CHTL_JS_官方特性演示.md  CHTL_PROJECT_COMPREHENSIVE_REVIEW.md  CHTL_PROJECT_CORRECTED_REVIEW.md  CHTL_PROJECT_STATUS.md  CHTL_SYNTAX_COMPLIANCE_CHECK.md  CHTL_SYNTAX_SUPPORT_CHECK.md  CHTL_SYNTAX_VALIDATION_REPORT.md  CHTL_SYNTAX_VERIFICATION_REPORT.md  CHTL语法文档.md  CHTL语法文档_from_main.md  CJMOD_API_演示.md  CJMOD_标准流程vs托管流程演示.cpp  CJMOD统一扫描器集成机制分析.md  CJMOD统一扫描器集成演示.cpp  CMOD_SYSTEM_README.md  CMakeLists.txt  CMakeLists.txt.backup  CMakeLists_antlr_test.txt  CMakeLists_backup.txt  CMakeLists_clean.txt  CMakeLists_complete_existing.txt  (+178 more)
CHTL/: CMakeLists.txt
CHTL/examples/: test.chtl  test.html
CHTL/src/: main.cpp
CHTL/tests/: CMakeLists.txt  test_chtl_basic.cpp  test_chtljs_basic.cpp  test_lexer.cpp  test_parser.cpp  test_parser_simple.cpp
CHTL_Project/: CMakeLists.txt
CHTL_Project/src/: main.cpp
CHTL_Project/tests/: CMakeLists.txt  test_basic.cpp
chtl-compiler/: .gitattributes  CMakeLists.txt  CMakeLists_antlr.txt  README.md  README_prebuilt.md  UPLOAD_INSTRUCTIONS.md  WINDOWS_BUILD_GUIDE.md  auto_fix_v3.sh  build.sh  build_antlr_libs.sh  build_antlr_runtime_windows.bat  build_simple.sh  build_v2.sh  build_v3.sh  build_windows_cross.sh  comprehensive_fix_v3.sh  create_mock_libs.py  create_release.sh  create_windows_release.sh  download_antlr_prebuilt.py  final_fix_v3.sh  final_fixes.sh  fix_errors.sh  fix_parser_v3_scope.sh  fix_remaining_errors.sh  quick_fix.sh  test.chtl  test_script.chtl  test_script.html
chtl-compiler/chtl_antlr_release/: README.md  README_ANTLR_Windows.md
chtl-compiler/docker/: Dockerfile.windows_build
chtl-compiler/docs/: CHTLJS-AST-实现总结.md  PR-CHTL-AST-节点实现.md  PR-CHTLJS-基础架构.md  编码规范.md  编译错误修复说明.md  重构指南.md  项目架构说明.md  项目进度报告-TODO16.md
chtl-compiler/example_windows_project/: build.bat  main.cpp
chtl-compiler/examples/: advanced.chtl  hello_world.chtl  minimal.chtl  oneline.chtl  scanner_demo.cpp  simple.chtl  use_antlr_parsers.cpp
chtl-compiler/prebuilt/: README.md  USE_CLOUD_BUILD.md
chtl-compiler/releases/: chtl-antlr-windows-v1.0.0.tar.gz.sha256  chtl-antlr-windows-v1.0.0.zip.sha256
chtl-compiler/scripts/: build_antlr4.sh  mingw-toolchain.cmake
chtl-compiler/single_header/: chtl_antlr_parsers.h  example
chtl-compiler/src/: main.cpp
chtl-compiler/tests/: CMakeLists.txt  TestCHTLAST.cpp  TestCHTLCompilerBase.cpp  TestCHTLJSAST.cpp  TestCHTLJSCompilerBase.cpp  TestCHTLJSParserGenerator.cpp  TestCHTLParserGenerator.cpp  TestCMODCJMOD.cpp  TestConstraintSystem.cpp  TestImportNamespace.cpp  TestScanner.cpp  TestStateContextHelper.cpp  TestStringUtils.cpp  basic.chtl  basic.html  basic_working.chtl  complete_features.chtl  demo_working.chtl  minimal.chtl  minimal.html  simple_test.cpp  style_test.chtl  style_test.html  test_all_features.chtl  test_chtl_compiler.cpp  test_chtl_v2.cpp  test_complete_v2.chtl  test_integration.cpp  test_minimal_template.chtl  test_minimal_template.html  test_multiline.chtl  test_origin.chtl  test_origin.html  test_scanner.cpp  test_scanner_v2.cpp  test_simple_origin.chtl  test_simple_origin.html  test_simple_v2.chtl  test_template.chtl  test_template_basic.chtl  (+5 more)
chtl-compiler/wasm_build/: build_wasm.sh
runtime/examples/: CMakeLists.txt  basic_example.cpp
src/: CHTLCompiler.cpp  CMakeLists.txt  ImportManager.cpp  ModuleManager.cpp  ModuleSystem.cpp  NamespaceManager.cpp  SimpleZip.cpp  main.cpp  main_ast_debug.cpp  main_complete.cpp  main_debug.cpp  main_diagnostic.cpp  main_safe_complete.cpp  main_simple.cpp  main_step_debug.cpp  main_working.cpp  test_lexer_reuse.cpp  test_managers.cpp  test_parser_creation.cpp  test_parser_minimal.cpp  test_parser_step.cpp  test_safe_parser.cpp
src/CHTL/: AST.cpp  AST.h  CHTLCompiler.cpp  CHTLCompiler.h  Generator.cpp  Generator.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Placeholder.h  Token.h
src/CHTLCompiler/: CHTLCompilerCore.cpp  CHTLCompilerCore.h
src/CHTLJS/: CHTLJSCompiler.cpp  CHTLJSCompiler.h  Lexer.cpp  Lexer.h  Placeholder.h  Token.h
src/CHTLJSCompiler/: CHTLJSCompiler.h
src/CJMOD/: AutoFillCJMODApi.cpp  CJMODApi.cpp  CompleteCJMODSystem.cpp  CorrectCJMODApi.cpp  ElegantCJMODApi.cpp  EnhancedCJMODApi.cpp  PracticalCJMODApi.cpp  ProperCJMODApi.cpp  RestructuredCJMODApi.cpp  SimpleCJMODApi.cpp  SophisticatedCJMODApi.cpp  TrueCJMODApi.cpp  UnifiedCJMODApi.cpp
src/CMOD/: CMODManager.cpp  CMODSystem.cpp  CompleteCMODSystem.cpp
src/CSS/: CSSCompiler.cpp  CssCompiler.cpp  CssCompiler.h
src/CSSCompiler/: CSSCompilerCore.cpp
src/Common/: ModulePathManager.cpp  ModulePathManager.h  RAIIStateGuard.cpp  RAIIStateGuard.h  StateManager.cpp  StateManager.h
src/Core/: CHTLUnifiedScanner.cpp  CHTLUnifiedScanner.h  CompilationResult.h  CompilerDispatcher.cpp  CompilerDispatcher.h  Segment.h  SegmentType.h
src/Dispatcher/: CompilerDispatcher.cpp  CompilerDispatcher.h  FragmentProcessors.cpp  IntermediateProcessors.cpp
src/JS/: JsCompiler.cpp  JsCompiler.h
src/JavaScript/: JavaScriptCompiler.cpp
src/JavaScriptCompiler/: JavaScriptCompilerCore.cpp
src/Module/: README.md
tests/: CMakeLists.txt  basic_architecture_test.chtl  basic_syntax_test.chtl  chtljs_test.chtl  cjmod_api_test.chtl  comprehensive_syntax_test.chtl  comprehensive_test_suite.chtl  ineveraway_demo.chtl  mixed_syntax_test.chtl  namespace_brace_omission_test.chtl  phase4_comprehensive_test_report.md  simple_chtl_test.chtl
(+1444 files in other folders)
